--- a/css/style.css
+++ b/css/style.css
@@ -48,23 +48,20 @@ p {
 .header {
   position: relative;
   width: 100%;
-  height: 90vh;
+  height: 100vh;
   background-image: url(/images/banner2.jpg);
   background-size: cover;
 }
 .header .navigation {
-  width: 95%;
-  height: 8vh;
+  width: 90%;
+  height: 14vh;
   margin: 0 auto;
 }
 .header .navigation .navbar {
-  height: 8vh;
+  height: 14vh;
   display: flex;
   justify-content: space-between;
   align-items: center;
-}
-.header .navigation .navbar .navbar__nav {
-  margin-top: 30px;
 }
 .header .navigation .navbar .navbar__nav a {
   color: #fff;
@@ -133,13 +130,15 @@ p {
 
 .our {
   width: 100%;
-  padding: 3rem;
+  padding: 3rem 0;
   background-color: #fff;
-  padding: 4rem 0;
   background-image: url(/images/plan_bg.png);
   background-size: contain;
   background-repeat: no-repeat;
   text-align: center;
+}
+.our .title {
+  margin-bottom: 2rem;
 }
 .our .img__title img {
   width: 60px;
@@ -149,7 +148,7 @@ p {
 .our h2 {
   text-align: center;
   font-size: 2rem;
-  font-family: var(--playfair);
+  font-family: var(--lora);
 }
 
 .our__content {
@@ -166,6 +165,9 @@ p {
 .our__content .our__item .title {
   background-color: rgba(250, 191, 119, 0.898);
   transition: all 0.5s linear;
+  padding: 1rem 1rem;
+  position: relative;
+  text-align: center;
 }
 .our__content .our__item .title:hover h2 {
   color: #fff;
@@ -176,6 +178,9 @@ p {
 }
 .our__content .our__item .title p {
   color: #fff;
+  width: 75%;
+  margin: 0 auto;
+  margin-bottom: 1rem;
 }
 .our__content .our__item .title button {
   padding: 10px 25px;
@@ -185,13 +190,19 @@ p {
   border: 0;
   transition: all 0.5s linear;
   border-radius: 30px;
-  margin-top: 1rem;
-  border-radius: 25px;
+  position: absolute;
+  transform: translate(-50%, -100%);
+  left: 50%;
+  top: 110%;
+  opacity: 0;
+}
+.our__content .our__item .title:hover button {
+  opacity: 1;
 }
 
 .and {
   width: 100%;
-  padding: 3rem;
+  padding: 3rem 0;
   background-color: #fff;
   padding: 4rem 0;
   background-size: contain;
@@ -206,7 +217,7 @@ p {
 .and h2 {
   text-align: center;
   font-size: 2rem;
-  font-family: var(--playfair);
+  font-family: var(--lora);
 }
 
 .and__content {
@@ -229,7 +240,7 @@ p {
 
 .about {
   width: 100%;
-  padding: 3rem;
+  padding: 3rem 0;
   background-color: #fff;
   background-image: url(/images/about_bg.jpg);
   background-repeat: no-repeat;
@@ -238,6 +249,11 @@ p {
 .about__content {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
+  gap: 3rem;
+  align-items: center;
+}
+.about__content .about__item .img img {
+  width: 60px;
 }
 .about__content .about__item h2 {
   font-size: 3rem;
@@ -254,4 +270,142 @@ p {
 }
 .about__content .about__item button:hover {
   background-color: rgb(229, 14, 68);
+}
+
+.blog {
+  width: 100%;
+  padding: 3rem 0;
+  background-color: #fff;
+}
+.blog .title h2 {
+  text-align: center;
+  font-size: 2rem;
+  font-family: var(--lora);
+}
+.blog .title .img img {
+  margin: 0 auto;
+  width: 60px;
+}
+
+.blog__content {
+  margin-top: 3rem;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 3rem;
+  align-items: center;
+  box-shadow: 0 0 20px rgb(122, 122, 122);
+}
+.blog__content .blog__item h4 {
+  margin-bottom: 50px;
+  color: rgb(173, 173, 173);
+}
+.blog__content .blog__item h2 {
+  font-family: var(--lora);
+  margin-bottom: 30px;
+  font-size: 30px;
+}
+.blog__content .blog__item p {
+  margin-bottom: 30px;
+}
+.blog__content .blog__item .img {
+  position: relative;
+}
+.blog__content .blog__item .img .date {
+  position: absolute;
+  transform: translate(-100%, -50%);
+  left: 100%;
+  top: 50%;
+  display: flex;
+  flex-direction: column;
+  background-color: #ff6781;
+  color: #fff;
+  padding: 5px 15px;
+  font-size: 20px;
+  font-weight: 900;
+  text-align: center;
+}
+
+.grooms {
+  width: 100%;
+  padding: 3rem 0;
+  background-color: #fff;
+  text-align: center;
+}
+.grooms .title h2 {
+  text-align: center;
+  font-size: 2rem;
+  font-family: var(--lora);
+  margin-bottom: 40px;
+}
+.grooms .title .img img {
+  margin: 0 auto;
+  width: 60px;
+}
+
+.grooms__content .grooms__item {
+  text-align: center;
+}
+.grooms__content .grooms__item .img img {
+  width: 30%;
+  margin: 0 auto;
+}
+.grooms__content .grooms__item h2 {
+  text-align: center;
+  font-size: 2rem;
+  font-family: var(--lora);
+  margin-top: 9vh;
+}
+.grooms__content .grooms__item p {
+  width: 45%;
+  margin: 0 auto;
+}
+
+.visit .visit__item {
+  width: 90%;
+  margin: 0 auto;
+  height: 14vh;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: #ff6781;
+}
+
+.contact {
+  width: 100%;
+  background-color: #2b2b2b;
+}
+
+.contact__content {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 2rem;
+  align-items: center;
+}
+.contact__content .contact__item form {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+.contact__content .contact__item form input {
+  height: 8vh;
+  text-indent: 10px;
+  font-size: 1.1rem;
+  background-color: #2b2b2b;
+  border: 0;
+  border-bottom: 1px solid #fff;
+}
+.contact__content .contact__item form textarea {
+  height: 8vh;
+  text-indent: 10px;
+  font-size: 1.1rem;
+  background-color: #2b2b2b;
+  border: 0;
+  border-bottom: 1px solid #fff;
+}
+.contact__content .contact__item form button {
+  width: 120px;
+  padding: 10px 25px;
+  font-size: 1.2rem;
+  border-radius: 30px;
+  background-color: rgba(255, 95, 95, 0.755);
 }/*# sourceMappingURL=style.css.map */
