--- a/css/style.scss
+++ b/css/style.scss
@@ -11,7 +11,7 @@
 }
 @mixin card() {
   width: 100%;
-  padding: 3rem;
+  padding: 3rem 0;
   background-color: #fff;
 }
 @mixin btn($bgc) {
@@ -27,7 +27,7 @@
 @mixin title() {
   text-align: center;
   font-size: 2rem;
-  font-family: var(--playfair);
+  font-family: var(--lora);
 }
 @mixin grid($gtc) {
   display: grid;
@@ -46,20 +46,20 @@ p {
 .header {
     position: relative;
   width: 100%;
-  height: 90vh;
+  height: 100vh;
   background-image: url(/images/banner2.jpg);
   background-size: cover;
   .navigation {
-    width: 95%;
-    height: 8vh;
+    width: 90%;
+    height: 14vh;
     margin: 0 auto;
     .navbar {
-      height: 8vh;
+      height: 14vh;
       display: flex;
       justify-content: space-between;
       align-items: center;
       .navbar__nav {
-        margin-top: 30px;
+       
         a {
           color: #fff;
           margin-left: 20px;
@@ -132,11 +132,13 @@ transform: translate(-50%, -50%);
 
 .our {
   @include card();
-  padding: 4rem 0;
   background-image: url(/images/plan_bg.png);
   background-size: contain;
   background-repeat: no-repeat;
   text-align: center;
+  .title{
+    margin-bottom: 2rem;
+  }
 
   .img__title{
     img{
@@ -163,6 +165,9 @@ transform: translate(-50%, -50%);
     .title {
         background-color: rgba(250, 191, 119, 0.898);
         transition: all 0.5s linear;
+        padding: 1rem 1rem;
+        position: relative;
+        text-align: center;
         &:hover h2{
             color: #fff;
         }
@@ -171,13 +176,24 @@ transform: translate(-50%, -50%);
         align-items: center;
       }
       p{
-        color: #fff
+        color: #fff;
+        width: 75%;
+        margin: 0 auto;
+        margin-bottom: 1rem;
+
       }
+
       button {
         @include btn(#2b2b2b);
-        margin-top: 1rem;
-        border-radius: 25px;
+        position: absolute;
+        transform: translate(-50%, -100%);
+        left: 50%;
+        top: 110%;
+        opacity: 0;
       }
+&:hover button{
+  opacity: 1;
+}
     }
   }
 }
@@ -227,9 +243,13 @@ transform: translate(-50%, -50%);
   }
 
   .about__content{
-    display: grid;
-    grid-template-columns: repeat(2,1fr);
+    @include grid(repeat(2,1fr));
     .about__item{
+      .img{
+        img{
+          width: 60px;
+        }
+      }
         h2{
             font-size: 3rem;
         }
@@ -243,3 +263,147 @@ transform: translate(-50%, -50%);
 
     }
   }
+
+
+  .blog{
+    @include card();
+    .title{
+      h2{
+              @include title();
+      }
+      .img{
+        img{
+          margin: 0 auto;
+          width: 60px;
+        }
+      }
+    }
+  }
+  .blog__content{
+    margin-top: 3rem;
+    @include grid(repeat(2,1fr));
+    box-shadow: 0 0 20px rgb(122, 122, 122);
+    .blog__item{
+      h4{
+        margin-bottom: 50px;
+        color: rgb(173, 173, 173);
+      }
+      h2{
+        font-family: var(--lora);
+        margin-bottom: 30px;
+        font-size: 30px;
+      }
+      p{
+        margin-bottom: 30px;
+      }
+      .img{
+        position: relative;
+        .date{
+          position: absolute;
+          transform: translate(-100%,-50%);
+          left: 100%;
+          top: 50%;
+          display: flex;
+          flex-direction: column;
+          background-color: #ff6781;
+          color: #fff;
+          padding: 5px 15px;
+          font-size: 20px;
+          font-weight: 900;
+          text-align: center;
+        }
+      }
+    }
+  }
+
+  .grooms{
+    @include card();
+    text-align: center;
+    .title{
+      h2{
+        @include title();
+        margin-bottom: 40px;
+      }
+      .img{
+        img{
+          margin: 0 auto;
+          width: 60px;
+        }
+      }
+    }
+  }
+
+  .grooms__content{
+  
+    .grooms__item{
+      text-align: center;
+      .img{
+        img{
+          width: 30%;
+          margin: 0 auto;
+        }
+      }
+      h2{
+        @include title();
+        margin-top: 9vh;
+      }
+      p{
+        width: 45%;
+        margin: 0 auto;
+      }
+    }
+  }
+  .visit{
+    .visit__item{
+      width: 90%;
+    margin: 0 auto;
+    height: 14vh;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      color: #ff6781;
+    }
+  }
+
+  .contact{
+    width: 100%;
+    background-color: #2b2b2b;
+  }
+  
+.contact__content{
+  display: grid;
+  grid-template-columns: repeat(2,1fr);
+  gap: 2rem;
+  align-items: center;
+  .contact__item{
+    form{
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+
+      input{
+        height: 8vh;
+        text-indent: 10px;
+        font-size: 1.1rem;
+        background-color: #2b2b2b;
+        border: 0;
+        border-bottom: 1px solid #fff;
+      }
+      textarea{
+        height: 8vh;
+        text-indent: 10px;
+        font-size: 1.1rem;
+        background-color: #2b2b2b;
+        border: 0;
+        border-bottom: 1px solid #fff;
+      }
+      button{
+        width: 120px;
+   padding: 10px 25px;
+   font-size: 1.2rem;
+   border-radius: 30px;
+   background-color: rgba(255, 95, 95, 0.755);
+      }
+    }
+  }
+}
