--- a/css/style.css
+++ b/css/style.css
@@ -360,14 +360,36 @@ p {
   margin: 0 auto;
 }
 
+.visit {
+  width: 100%;
+  height: 25vh;
+  padding: 3rem 0;
+  position: relative;
+}
+.visit .black {
+  position: absolute;
+  width: 100%;
+  height: 50%;
+  background-color: #2b2b2b;
+  bottom: 0;
+  left: 0;
+}
 .visit .visit__item {
-  width: 90%;
+  position: absolute;
+  transform: translate(-50%, -50%);
+  left: 50%;
+  top: 50%;
+  width: 70%;
   margin: 0 auto;
-  height: 14vh;
+  padding: 2rem 1rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
   color: #ff6781;
+  box-shadow: 0 0 20px grey;
+  font-size: 1.2rem;
+  z-index: 9;
+  background-color: #fff;
 }
 
 .contact {
@@ -386,12 +408,19 @@ p {
   flex-direction: column;
   gap: 1rem;
 }
+.contact__content .contact__item form h2 {
+  text-align: center;
+  font-size: 2rem;
+  font-family: var(--lora);
+  color: #fff;
+}
 .contact__content .contact__item form input {
   height: 8vh;
   text-indent: 10px;
   font-size: 1.1rem;
   background-color: #2b2b2b;
   border: 0;
+  color: #fff;
   border-bottom: 1px solid #fff;
 }
 .contact__content .contact__item form textarea {
@@ -407,5 +436,33 @@ p {
   padding: 10px 25px;
   font-size: 1.2rem;
   border-radius: 30px;
+  margin: 0 auto;
   background-color: rgba(255, 95, 95, 0.755);
+  color: #fff;
+  transition: 1s;
+}
+.contact__content .contact__item form button:hover {
+  color: #000;
+  background-color: #fff;
+  box-shadow: 0 0 20px #fff;
+}
+.contact__content .contact__item .social {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 1.5rem;
+  color: #fff;
+}
+.contact__content .contact__item .social i {
+  margin-left: 15px;
+}
+
+.copyRight {
+  background-color: #2b2b2b;
+  text-align: center;
+  color: #fff;
+  padding: 1rem 0;
+}
+.copyRight p {
+  font-size: 1.1rem;
 }/*# sourceMappingURL=style.css.map */
